feat: add password sign-in
